# zebranet

./: .gitignore  CHAT_FEATURE.md  README.md  Start.md
.github/workflows/: codeql.yml
backend/: .env.example  pyproject.toml
backend/src/app/: config.py
frontend/src/: index.css
frontend/src/pages/: LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: mockApi.ts
frontend/src/types/: index.ts
infra/: DEPLOYMENT_PLAN.md  docker-compose.yml
infra/migrations/manual/: 0001_initial_schema_clean.sql  0001_initial_template.sql  0002_add_messages.sql  0003_optimize_for_neon_free_tier.sql  0004_add_profile_image_url.sql  MIGRATION_GUIDE.md  README.md
src/backend/: .env.example  pyproject.toml
src/backend/src/app/: __init__.py  config.py  main.py
src/backend/src/app/api/: deps.py  routes_auth.py  routes_messages.py  routes_refs.py
src/backend/src/app/core/: auth.py  security.py
src/backend/src/app/db/: init_db.py  session.py
src/backend/src/app/models/: __init__.py  field_location.py  game.py  league.py  message.py  note.py  referee.py  user.py
src/backend/src/app/schemas/: ai.py  auth.py  field_location.py  game.py  message.py  rating.py  referee.py
src/backend/src/app/services/: ai_chat_service.py  ai_matching_service.py  ingestion_service.py  league_service.py  message_service.py  referee_service.py
src/components/league/: AIAssignor.tsx  CreateGameForm.tsx  GamesList.tsx  RefCard.tsx  (+1 more)
src/contexts/: AuthContext.tsx
src/frontend/: index.html  tailwind.config.ts
src/pages/: RefereeDashboard.tsx
src/services/: api.ts
(+43 files in other folders)
