[project]
name = "refnexus-backend"
version = "0.1.0"
description = "RefNexus FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-dotenv>=1.0",
    "httpx>=0.26",
    "openai>=1.12",
    "email-validator>=2.1",
    "regex>=2026.1.15",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
]

[tool.ruff]
line-length = 100
